--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,17 +24,30 @@ html {
     height: 46px;
     background-color: #000;
 }
-#nav li {
+#nav, .subnav{
+    list-style-type: none;
+}
+#nav > li {
     display: inline-block;
 }
-#nav li a {
+#nav li {
+    position: relative;
+}
+#nav > li > a {
     color:#fff;
+    text-transform: uppercase;
+}
+#nav li a {
     text-decoration: none;
     line-height: 46px;
     padding: 0 24px;
-    display: inline-block;
+    display: block;
 }
-#nav li:hover a {
+#nav li:hover .subnav {
+    display: block;
+}
+#nav > li:hover > a,
+#nav .subnav li:hover a{
     background-color: #ccc;
     color: #000;
 }
@@ -43,9 +56,23 @@ html {
 }
 #nav .subnav{
     display: none;
+    position: absolute;
+    box-shadow:rgba(0,0,0,0.3);
+    min-width: 160px;
+    top: 100%;
+    left: 0;
+    background-color: #fff;
+    color: #000;
+    box-shadow:0 0 10px rgba(0,0,0,0.3);
+}
+#nav .subnav a {
+    color: #000;
+    padding: 0 16px;
+    line-height: 38px;
 }
 #slider{
-
+    min-height: 500px;
+   background-color: #fff;
 }
 
 #content{
