--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,8 +21,13 @@ html {
 4. Kiểu dáng (Kiểu chữ, hình tròn, vuông)
 */
 #header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     height: 46px;
     background-color: #000;
+    z-index: 1;
 }
 #nav {
     display: inline-block;
@@ -88,11 +93,32 @@ html {
 #header .search-icon {
     color: #fff;
     line-height: 46px;
+    font-size: 20px;
 }
 #slider{
-    min-height: 500px;
-   background-color: #fff;
+    position: relative;
+    margin-top: 46px;
+    padding-top: 50%;
+    background: url('/assets/img/slider/slider1.jpg') top center / cover no-repeat;
 }
+#slider .text-heading{
+    font-weight: 500;
+    font-size: 24px;
+}
+
+#slider .text-content{
+    width: 100%;
+    position:absolute;
+    bottom: 47px;
+    color: #fff;
+    text-align: center;
+}
+
+#slider .text-description{
+    font-size: 15px;
+    margin-top: 25px;
+}
+
 #content{
 
 }
