--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,9 @@ html {
 3. màu sắc
 4. Kiểu dáng (Kiểu chữ, hình tròn, vuông)
 */
+.clear {
+    clear: both;
+}
 #header{
     position: fixed;
     top: 0;
@@ -121,6 +124,48 @@ html {
 
 #content{
 
+}
+#content .content-section{
+    width: 800px;
+    padding: 64px 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+#content .section-heading {
+    text-align:center;
+    font-size: 30px;
+    font-weight: 500;
+    letter-spacing: 4px;
+}
+#content .section-sub-heading {
+    text-align:center;
+    font-size: 15px;
+    margin-top: 25px;
+    font-style: italic;
+    opacity: 0.6;
+}
+
+#content .about-text {
+    margin-top: 25px;
+    text-align:justify;
+    line-height: 1.4;
+}
+#content .member-list {
+    padding-top: 48px;
+    overflow: hidden;
+}
+#content .member-item {
+    float: left;
+    width: 33.33333%;
+    text-align: center;
+}
+#content .member-name {
+    font-size: 15px;
+}
+#content .member-img {
+    margin-top: 15px;
+    width: 154px;
+    border-radius: 4px;
 }
 
 #footer{
