tour tickets css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,9 @@ html {
 .clear {
     clear: both;
 }
+.text-white {
+    color: #fff !important;
+}
 #header{
     position: fixed;
     top: 0;
@@ -167,7 +170,38 @@ html {
     width: 154px;
     border-radius: 4px;
 }
-
+/* tour section */
+.tour-section {
+    background-color: #000;
+}
+.tickets-list{
+    background-color: #fff;
+    margin-top: 40px;
+    list-style-type: none;
+}
+.tickets-list li {
+    padding: 11px 16px;
+    font-size: 15px;
+    border: 1px solid #ddd;
+    color: #757575;
+}
+.tickets-list .sould-out {
+    color: #fff;
+    background-color: #f44336;
+    padding: 3px 4px;
+    margin-left: 16px;
+}
+.tickets-list .quantity {
+    float: right;
+    background-color: #000;
+    color: #fff;
+    border-radius: 50%;
+    height: 24px;
+    width: 24px;
+    text-align: center;
+    line-height: 24px;
+    margin-top: -3px;
+}
 #footer{
 
 }
