Contact form CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,19 +25,30 @@ html {
     margin-left: -8px;
     margin-right: -8px;
 }
+.row::after {
+    content: "";
+    display: block;
+    clear: both;
+}
 .col {
     float: left;
     padding-right: 8px;
     padding-left: 8px;
 }
-.col-harf {
+.col-full {
+    width: 100%;
+}
+.col-half {
     width: 50%;
 }
 .col-third {
     width: 33.33333%;
 }
-.clear {
-    clear: both;
+.mt-8 {
+    margin-top: 8px !important;
+}
+.mt-16 {
+    margin-top: 16px !important;
 }
 .text-white {
     color: #fff !important;
@@ -264,6 +275,33 @@ html {
     background-color: #ccc;
     color: #000;
 
+}
+/* Contact form */
+.contact-content {
+    margin-top: 48px;
+}
+.contact-info {
+    font-size: 18px;
+    line-height: 1.5;
+}
+.contact-info i[class*="ti-"]{
+    width: 30px;
+    display: inline-block;
+}
+.contact-form {
+    font-size: 15px;
+}
+.contact-form .form-control {
+    padding: 10px;
+    border: 1px solid #ccc;
+    width: 100%;
+}
+.contact-form .form-submit-btn {
+    background-color: #000;
+    color: #fff;
+    border: 1px solid #000;
+    padding: 10px 16px;
+    float: right;
 }
 #footer{
 
