--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,9 @@ html {
 .text-center {
     text-align: center !important;
 }
+.pull-right {
+    float: right !important;
+}
 #header{
     position: fixed;
     top: 0;
@@ -160,7 +163,7 @@ html {
 }
 #content .content-section{
     width: 800px;
-    padding: 64px 0;
+    padding: 64px 0 112px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -230,7 +233,6 @@ html {
 /* Places */
 .places-list{
     margin-top: 32px;
-    margin-top: 48px;
 }
 .place-img{
     width: 100%;
@@ -263,15 +265,17 @@ html {
     margin-top: 15px;
     line-height: 1.4;
 }
-.place-buy-btn{
+.btn{
     background-color: #000;
     color: #fff;
     text-decoration: none;
     padding: 11px 16px;
     display: inline-block;
     margin-top: 15px;
+    border: none;
+    cursor: pointer;
 }
-.place-buy-btn:hover {
+.btn:hover {
     background-color: #ccc;
     color: #000;
 
@@ -296,13 +300,28 @@ html {
     border: 1px solid #ccc;
     width: 100%;
 }
-.contact-form .form-submit-btn {
-    background-color: #000;
-    color: #fff;
-    border: 1px solid #000;
-    padding: 10px 16px;
-    float: right;
+.map-section img {
+    width: 100%;
 }
 #footer{
-
+    padding: 64px 16px;
+    text-align: center;
+}
+#footer .socials-list {
+    font-size: 24px;
+}
+#footer .socials-list a {
+    color: rgba(0,0,0,0.6);
+    text-decoration: none;
+}
+#footer .copyright a:hover,
+#footer .socials-list a:hover {
+    color: rgba(0,0,0,0.4);
+}
+#footer .copyright {
+    color: rgba(0,0,0,0.6);
+    margin-top: 15px;
+}
+#footer .copyright a {
+    color: rgba(0,0,0,0.6);   
 }
