53. Mobile menu responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,7 @@ html {
     height: 46px;
     background-color: #000;
     z-index: 1;
+    overflow: hidden;
 }
 #nav {
     display: inline-block;
@@ -122,14 +123,24 @@ html {
 #nav .subnav-arrow-down {
     font-size: 14px;
 }
+#header .mobile-menu-btn,
 #header .search-btn {
     float:right;
     padding: 0 21px;
 }
+#header .mobile-menu-btn:hover,
 #header .search-btn:hover {
     background-color: #f44336;
     cursor: pointer;
 }
+#header .mobile-menu-btn:hover {
+    background-color: #ccc;
+}
+#header .mobile-menu-btn:hover .menu-icon {
+    color: #000;
+    background-color: #ccc;
+}
+#header .menu-icon,
 #header .search-icon {
     color: #fff;
     line-height: 46px;
