54. Mobile menu fix bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,12 @@ html {
 #nav .subnav-arrow-down {
     font-size: 14px;
 }
+#header .mobile-menu-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: none;
+}
 #header .mobile-menu-btn,
 #header .search-btn {
     float:right;
