--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -17,6 +17,20 @@
     #nav>li:first-child {
         display: inline-block;
     }
+    #nav .subnav {
+        position: initial;
+        background-color: #333;
+    }
+    #nav .subnav a {
+        color: #fff;
+        padding: 5px 41px;
+    }
+    #nav li a {
+        padding: 1px 24px;
+    }
+    #header {
+        overflow: hidden;
+    }
     #header .search-btn {
         display: none;
     }
