--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 /* Reset css */
-*{
+
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -7,13 +8,16 @@
 
 html {
     scroll-behavior: smooth;
-    font-family: Helvetica,Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
 }
+
+
 /* 
 1. từ ngoài vào trong
 2. trừ trong xuống dưới
 3. từ tổng quan đến chi tiết
 */
+
 
 /*
 1.vị trí
@@ -21,46 +25,60 @@ html {
 3. màu sắc
 4. Kiểu dáng (Kiểu chữ, hình tròn, vuông)
 */
+
+
 /* Common */
+
 .row {
     margin-left: -8px;
     margin-right: -8px;
 }
+
 .row::after {
     content: "";
     display: block;
     clear: both;
 }
+
 .col {
     float: left;
     padding-right: 8px;
     padding-left: 8px;
 }
+
 .col-full {
     width: 100%;
 }
+
 .col-half {
     width: 50%;
 }
+
 .col-third {
     width: 33.33333%;
 }
+
 .mt-8 {
     margin-top: 8px !important;
 }
+
 .mt-16 {
     margin-top: 16px !important;
 }
+
 .text-white {
     color: #fff !important;
 }
+
 .text-center {
     text-align: center !important;
 }
+
 .pull-right {
     float: right !important;
 }
-#header{
+
+#header {
     position: fixed;
     top: 0;
     left: 0;
@@ -69,116 +87,133 @@ html {
     background-color: #000;
     z-index: 1;
 }
+
 #nav {
     display: inline-block;
 }
 
-#nav, .subnav{
+#nav,
+.subnav {
     list-style-type: none;
 }
-#nav > li {
+
+#nav>li {
     display: inline-block;
 }
+
 #nav li {
     position: relative;
 }
-#nav > li > a {
-    color:#fff;
+
+#nav>li>a {
+    color: #fff;
     text-transform: uppercase;
 }
+
 #nav li a {
     text-decoration: none;
     line-height: 46px;
     padding: 0 24px;
     display: block;
 }
+
 #nav li:hover .subnav {
     display: block;
 }
-#nav > li:hover > a,
-#nav .subnav li:hover a{
+
+#nav>li:hover>a,
+#nav .subnav li:hover a {
     background-color: #ccc;
     color: #000;
 }
-#nav{
 
-}
-#nav .subnav{
+#nav {}
+
+#nav .subnav {
     display: none;
     position: absolute;
-    box-shadow:rgba(0,0,0,0.3);
+    box-shadow: rgba(0, 0, 0, 0.3);
     min-width: 160px;
     top: 100%;
     left: 0;
     background-color: #fff;
     color: #000;
-    box-shadow:0 0 10px rgba(0,0,0,0.3);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
+
 #nav .subnav a {
     color: #000;
     padding: 0 16px;
     line-height: 38px;
 }
+
 #nav .subnav-arrow-down {
     font-size: 14px;
 }
+
 #header .mobile-menu-btn {
     position: absolute;
     top: 0;
     right: 0;
     display: none;
 }
+
 #header .mobile-menu-btn,
 #header .search-btn {
-    float:right;
+    float: right;
     padding: 0 21px;
 }
+
 #header .mobile-menu-btn:hover,
 #header .search-btn:hover {
     background-color: #f44336;
     cursor: pointer;
 }
+
 #header .mobile-menu-btn:hover {
     background-color: #ccc;
 }
+
 #header .mobile-menu-btn:hover .menu-icon {
     color: #000;
     background-color: #ccc;
 }
+
 #header .menu-icon,
 #header .search-icon {
     color: #fff;
     line-height: 46px;
     font-size: 20px;
 }
-#slider{
+
+#slider {
     position: relative;
     margin-top: 46px;
     padding-top: 50%;
     background: url('/assets/img/slider/slider1.jpg') top center / cover no-repeat;
 }
-#slider .text-heading{
+
+#slider .text-heading {
     font-weight: 500;
     font-size: 24px;
 }
 
-#slider .text-content{
+#slider .text-content {
     width: 100%;
-    position:absolute;
+    position: absolute;
     bottom: 47px;
     color: #fff;
     text-align: center;
 }
 
-#slider .text-description{
+#slider .text-description {
     font-size: 15px;
     margin-top: 25px;
 }
 
-#content{
+#content {}
 
-}
-#content .content-section{
+#content .content-section {
     width: 800px;
     max-width: 100%;
     padding: 64px 0 112px;
@@ -187,14 +222,16 @@ html {
     padding-left: 16px;
     padding-right: 16px;
 }
+
 #content .section-heading {
-    text-align:center;
+    text-align: center;
     font-size: 30px;
     font-weight: 500;
     letter-spacing: 4px;
 }
+
 #content .section-sub-heading {
-    text-align:center;
+    text-align: center;
     font-size: 15px;
     margin-top: 25px;
     font-style: italic;
@@ -203,42 +240,51 @@ html {
 
 #content .about-text {
     margin-top: 25px;
-    text-align:justify;
+    text-align: justify;
     line-height: 1.4;
 }
+
 #content .member-list {
-    padding-top: 48px;
-    overflow: hidden;
+    padding-top: 32px;
 }
+
 #content .member-name {
     font-size: 15px;
 }
+
 #content .member-img {
     margin-top: 15px;
     width: 154px;
     border-radius: 4px;
 }
+
+
 /* tour section */
+
 .tour-section {
     background-color: #000;
 }
-.tickets-list{
+
+.tickets-list {
     background-color: #fff;
     margin-top: 40px;
     list-style-type: none;
 }
+
 .tickets-list li {
     padding: 11px 16px;
     font-size: 15px;
     border: 1px solid #ddd;
     color: #757575;
 }
+
 .tickets-list .sold-out {
     color: #fff;
     background-color: #f44336;
     padding: 3px 4px;
     margin-left: 16px;
 }
+
 .tickets-list .quantity {
     float: right;
     background-color: #000;
@@ -250,42 +296,53 @@ html {
     line-height: 24px;
     margin-top: -3px;
 }
+
+
 /* Places */
-.places-list{
+
+.places-list {
     margin-top: 32px;
 }
-.place-img{
+
+.place-img {
     width: 100%;
     display: block;
 }
+
 .place-img:hover {
     opacity: 0.6;
 }
-.place-body{
+
+.place-body {
     background-color: #fff;
 }
-.place-heading{
+
+.place-heading {
     font-size: 15px;
     font-weight: 600;
 }
+
 .place-body .place-time {
     opacity: 0.6;
 }
+
 .place-body {
     padding: 14px;
     font-size: 15px;
 }
-.place-heading{
 
+.place-heading {}
+
+.place-time {
+    margin-top: 15px;
 }
-.place-time{
-    margin-top: 15px;    
-}
-.place-desc{
+
+.place-desc {
     margin-top: 15px;
     line-height: 1.4;
 }
-.btn{
+
+.btn {
     background-color: #000;
     color: #fff;
     text-decoration: none;
@@ -295,53 +352,67 @@ html {
     border: none;
     cursor: pointer;
 }
+
 .btn:hover {
     background-color: #ccc;
     color: #000;
-
 }
+
+
 /* Contact form */
+
 .contact-content {
     margin-top: 48px;
 }
+
 .contact-info {
     font-size: 18px;
     line-height: 1.5;
 }
-.contact-info i[class*="ti-"]{
+
+.contact-info i[class*="ti-"] {
     width: 30px;
     display: inline-block;
 }
+
 .contact-form {
     font-size: 15px;
 }
+
 .contact-form .form-control {
     padding: 10px;
     border: 1px solid #ccc;
     width: 100%;
 }
+
 .map-section img {
     width: 100%;
 }
-#footer{
+
+#footer {
     padding: 64px 16px;
     text-align: center;
 }
+
 #footer .socials-list {
     font-size: 24px;
 }
+
 #footer .socials-list a {
-    color: rgba(0,0,0,0.6);
+    color: rgba(0, 0, 0, 0.6);
     text-decoration: none;
 }
+
 #footer .copyright a:hover,
 #footer .socials-list a:hover {
-    color: rgba(0,0,0,0.4);
+    color: rgba(0, 0, 0, 0.4);
 }
+
 #footer .copyright {
-    color: rgba(0,0,0,0.6);
+    color: rgba(0, 0, 0, 0.6);
     margin-top: 15px;
 }
+
 #footer .copyright a {
-    color: rgba(0,0,0,0.6);   
+    color: rgba(0, 0, 0, 0.6);
 }
