57. Contact form responsive

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -11,8 +11,12 @@
 /* Mobile */
 
 @media (max-width: 740px) {
+    .s-full-width,
     .s-col-full {
         width: 100%;
+    }
+    .s-mt-8 {
+        margin-top: 8px !important;
     }
     #header {
         overflow: hidden;
@@ -45,5 +49,8 @@
     }
     #content .member-img {
         width: 60%;
+    }
+    .contact-form {
+        margin-top: 16px;
     }
 }
