--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,6 +3,34 @@
 @media (min-width: 1024px) {}
 
 
+/* Tablet and Mobile */
+
+@media (max-width: 1023px) {
+    .btn {
+        padding: 15px 16px;
+    }
+    #nav .subnav a {
+        padding: 5px 12px;
+    }
+    .contact-form .form-control {
+        padding: 15px;
+    }
+    .contact-info {
+        line-height: 2;
+    }
+    #footer .socials-list {
+        font-size: 48px;
+    }
+    #footer .socials-list a {
+        margin: 0 8px;
+    }
+    #footer .copyright a {
+        padding: 12px 0;
+        display: inline-block;
+    }
+}
+
+
 /* Tablet */
 
 @media (min-width: 740px) and (max-width: 1023px) {}
@@ -51,6 +79,6 @@
         width: 60%;
     }
     .contact-form {
-        margin-top: 16px;
+        margin-top: 32px;
     }
 }
