--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -5,7 +5,7 @@
 
 /* Tablet and Mobile */
 
-@media (max-width: 1023px) {
+@media (max-width: 63.9375em) {
     .btn {
         padding: 15px 16px;
     }
@@ -33,12 +33,12 @@
 
 /* Tablet */
 
-@media (min-width: 740px) and (max-width: 1023px) {}
+@media (min-width: 46.25em) and (max-width: 63.9375em) {}
 
 
 /* Mobile */
 
-@media (max-width: 740px) {
+@media (max-width: 46.1875em) {
     .s-full-width,
     .s-col-full {
         width: 100%;
