--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,12 +194,13 @@ html {
     position: relative;
     margin-top: 46px;
     padding-top: 50%;
-    background: url('/assets/img/slider/slider2.jpg') top center / cover no-repeat;
+    background: url('../img/slider/slider2.jpg') top center / cover no-repeat;
 }
 
 #slider .text-heading {
     font-weight: 500;
     font-size: 24px;
+    text-shadow: 0 0 2px #000;
 }
 
 #slider .text-content {
@@ -213,6 +214,7 @@ html {
 #slider .text-description {
     font-size: 15px;
     margin-top: 25px;
+    text-shadow: 0 0 1px #000;
 }
 
 #content {}
